fix display issue on theme page being overlapped

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,9 +2,10 @@
 body {
     background-color: #ABA9BB;
     color: #020735;
-    position: relative;
+    display: flex;
+    flex-direction: column;
     margin: 0;
-    min-height: 100vh;
+    height: 100%;
 }
 
 /*Header style Rules*/
@@ -91,6 +92,7 @@ legend {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 100px;
 }
 
 .introduction-text {
@@ -207,10 +209,17 @@ The following Style Rules give the content more space and realigns it to be more
         height: 200px;
         padding: 0;
     }
-
+    .theme-allign {
+        display:flex;
+        justify-content: center;
+        background: url("../images/book-background.jpg") no-repeat center center / cover;
+        width: 100%;
+        height: 50vh;
+    }
     .game-display-page {
         display: flex;
         flex-direction: row;
+        justify-content: space-around;
     }
     .side-bar{
         display: flex;
@@ -224,13 +233,6 @@ The following Style Rules give the content more space and realigns it to be more
         grid-template-columns: repeat(2, auto);
         margin-top: 25px;
         gap: 20px;
-    }
-    .theme-allign {
-        display:flex;
-        justify-content: center;
-        background: url("../images/book-background.jpg") no-repeat center center / cover;
-        width: 100%;
-        height: auto;
     }
     
 }
